--- a/index.html
+++ b/index.html
@@ -192,7 +192,7 @@
     <div class="container">
       <div class="menu-area">
         <!-- Navbar -->
-        <div class="navbar navbar-default" role="navigation">
+        <div class="navbar navbar-default hidden-xs" role="navigation">
           <div class="navbar-header">
             <button type="button" class="navbar-toggle" data-toggle="collapse" data-target=".navbar-collapse">
               <span class="sr-only">Toggle navigation</span>
@@ -314,6 +314,171 @@
             </ul>
           </div><!--/.nav-collapse -->
         </div>
+        <nav class="visible-xs">
+<button class="btn btn-default"><i class="fa fa-bars" style="color:#ff6666" aria-hidden="true"></i></button>
+<div class="mobileNavStyle">
+<div class="panel-group" style="margin-bottom:5px;" id="accordion">
+  <div class="panel panel-default">
+    <div class="panel-heading customHeading" href="#home" data-toggle="collapse" data-parent="#accordion" >
+      <h4 class="panel-title">
+        <a class="accordion-toggle" >          
+          Home
+        </a>
+      </h4>
+    </div>
+  </div>
+  <div class="panel panel-default">
+    <div class="panel-heading customHeading" data-toggle="collapse" data-parent="#accordion" href="#men">
+      <h4 class="panel-title">
+        <a class="accordion-toggle">
+          <span class="glyphicon glyphicon-plus pull-right"></span>
+          Men
+        </a>
+      </h4>
+    </div>
+    <div id="men" class="panel-collapse collapse">
+      <div class="panel-body padding-0">
+        <ul class="list-group">
+			<li class="list-group-item">Casual</li>
+			<li class="list-group-item">Sports</li>        
+			<li class="list-group-item">Formal</li>
+			<li class="list-group-item">Videos</li>
+			<li class="list-group-item">Documents</li>        
+			<li class="list-group-item">Standard</li>
+			<li class="list-group-item">T-Shirts</li>
+			<li class="list-group-item">Shirts</li>        
+			<li class="list-group-item">Jeans</li>
+			<li class="list-group-item">Trousers</li>
+		</ul>
+      </div>
+    </div>
+  </div>
+  <div class="panel panel-default">
+   <div class="panel-heading customHeading" data-toggle="collapse" data-parent="#accordion" href="#women">
+      <h4 class="panel-title">
+        <a class="accordion-toggle">
+          <span class="glyphicon glyphicon-plus pull-right"></span>
+          Women
+        </a>
+      </h4>
+    </div>
+    <div id="women" class="panel-collapse collapse">
+      <div class="panel-body padding-0">
+	    <ul class="list-group">
+			<li class="list-group-item">Kurta & Kurti</li>
+			<li class="list-group-item">Trousers</li>        
+			<li class="list-group-item">Sarees</li>
+			<li class="list-group-item">Shoes</li>
+			<li class="list-group-item">Make Up</li>        
+			<li class="list-group-item">Hair Care</li>
+			<li class="list-group-item">T-Shirts</li>
+			<li class="list-group-item">Shirts</li>        
+			<li class="list-group-item">Jeans</li>
+			<li class="list-group-item">Bags</li>
+		</ul>
+      </div>
+    </div>
+  </div>
+  <div class="panel panel-default">
+    <div class="panel-heading customHeading" data-toggle="collapse" data-parent="#accordion" href="#kids">
+      <h4 class="panel-title">
+        <a class="accordion-toggle">
+          <span class="glyphicon glyphicon-plus pull-right"></span>
+          Kids
+        </a>
+      </h4>
+    </div>
+    <div id="kids" class="panel-collapse collapse">
+     <div class="panel-body padding-0">
+	    <ul class="list-group">
+			<li class="list-group-item">Educational</li>
+			<li class="list-group-item">Trousers</li>        
+			<li class="list-group-item">Sarees</li>
+			<li class="list-group-item">Shoes</li>
+			<li class="list-group-item">Books</li>        
+			<li class="list-group-item">Sleep wear</li>
+			<li class="list-group-item">T-Shirts</li>
+			<li class="list-group-item">Shirts</li>        
+			<li class="list-group-item">Jeans</li>
+			<li class="list-group-item">Bags</li>
+		</ul>
+      </div>
+    </div>
+  </div>
+  <div class="panel panel-default">
+    <div class="panel-heading customHeading" data-toggle="collapse" data-parent="#accordion" href="#sports">
+      <h4 class="panel-title">
+        <a class="accordion-toggle">
+          <span class="glyphicon glyphicon-plus pull-right"></span>
+          Sports
+        </a>
+      </h4>
+    </div>
+    <div id="sports" class="panel-collapse collapse">
+      <div class="panel-body padding-0">
+	    <ul class="list-group">
+			<li class="list-group-item">Cricket</li>
+			<li class="list-group-item">Badminton</li>        
+			<li class="list-group-item">Football</li>
+			<li class="list-group-item">Etc..</li>			
+		</ul>
+      </div>
+    </div>
+  </div>
+  <div class="panel panel-default">
+    <div class="panel-heading customHeading" data-toggle="collapse" data-parent="#accordion" href="#digital">
+      <h4 class="panel-title">
+        <a class="accordion-toggle">
+          <span class="glyphicon glyphicon-plus pull-right"></span>
+          Digital
+        </a>
+      </h4>
+    </div>
+    <div id="digital" class="panel-collapse collapse">
+      <div class="panel-body padding-0">
+	    <ul class="list-group">
+			<li class="list-group-item">Camera</li>
+			<li class="list-group-item">Mobiles</li>        
+			<li class="list-group-item">Laptops</li>
+			<li class="list-group-item">Headphones</li>
+			<li class="list-group-item">Tables</li>        
+			<li class="list-group-item">Speaker</li>
+		</ul>
+      </div>
+    </div>
+  </div>
+  <div class="panel panel-default">
+    <div class="panel-heading customHeading" data-toggle="collapse" data-parent="#accordion" href="#furniture">
+      <h4 class="panel-title">
+        <a class="accordion-toggle">
+          <span class="glyphicon glyphicon-plus pull-right"></span>
+          Furniture
+        </a>
+      </h4>
+    </div>
+    <div id="furniture" class="panel-collapse collapse">
+      <div class="panel-body padding-0">
+	    <ul class="list-group">
+			<li class="list-group-item">Wooden</li>
+			<li class="list-group-item">Plastic</li>        
+			<li class="list-group-item">Glass</li>
+			<li class="list-group-item">Etc.</li>
+		</ul>
+      </div>
+    </div>
+  </div>
+  <div class="panel panel-default">
+    <div class="panel-heading customHeading" >
+      <h4 class="panel-title">
+        <a class="accordion-toggle">Contact</a>
+      </h4>
+    </div>
+   
+  </div>
+  
+</div>
+</div>
+</nav>
       </div>       
     </div>
   </section>
